--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div></a>
                 </div>
                 <div id="labs" >
-                    <a href="#"><div>
+                    <a href="https://hypervare.github.io/JavaScript-Leak/"><div>
                         <h3>JavaScript-Leak | medium</h3>
                         <p>Javascript used in website to make them efficient and secure.</p>
                     </div></a>
