--- a/index.html
+++ b/index.html
@@ -62,11 +62,8 @@
             <div id="mainLogo">
                 <a href="https://hypervare.com"><h2>HyperVare</h2></a>
             </div>
-            <h3>CTF Labs</h3>
             <div id="navEle">
-                <a href="https://hypervare.github.io/HVsec/">Home</a>
-                <a href="https://hypervare.com/about">About</a>
-                <a href="https://hypervare.com/contact">Contact</a>
+                <a href="https://hypervare.github.io/HVsec/">About</a>
             </div>
         </div>
         <div id="labsCate">
