--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div id="labsList">
                 <div id="labs" >
                     <a href="#"><div>
-                        <h3>Hidden-Msg-Photo | medium</h3>
+                        <h3>Hidden-Msg-Photo | hard</h3>
                         <p>Hackers hide viruses and messages into an image.</p>
                     </div></a>
                 </div>
