--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/png" href="/HV-CTFs/blob/main/hypervare-logo.png"/>
+        <link rel="icon" type="image/png" href="hypervare-logo.png"/>
         <title>HV-CTFs</title>
         <style>
             *{
