--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" type="image/png" href="hypervare-logo.png"/>
+        <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
         <title>HV-CTFs</title>
         <style>
             *{
@@ -16,12 +17,13 @@
             }
             #header #mainLogo{
                 margin-left: 1rem;
+                font-family: 'Black Ops One', system-ui;
             }
             #header #mainLogo a{
                 text-decoration: none;
             }
             #header #navEle{
-                right: 2rem;
+                right: 1.2rem;
                 font-size: 1.1rem;
                 margin-top: 1.5rem;
             }
