--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div id="labs" >
                     <a href="https://hypervare.github.io/JavaScript-Leak/"><div>
-                        <h3>JavaScript-Leak | medium</h3>
+                        <h3>JavaScript-Leak | easy</h3>
                         <p>Javascript used in website to make them efficient and secure.</p>
                     </div></a>
                 </div>
@@ -91,7 +91,7 @@
             <div id="labsList">
                 <div id="labs" >
                     <a href="#"><div>
-                        <h3>Hidden-Msg-Photo | hard</h3>
+                        <h3>Hidden-Msg-Photo | easy</h3>
                         <p>Hackers hide viruses and messages into an image.</p>
                     </div></a>
                 </div>
